--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.0.0-snapshot.1",
+  "version": "1.0.0-snapshot.1.c9d0f4b34c.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "main": "dist/assets/bundle/app.js",
   "files": [
