--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.0.0-snapshot.3",
+  "version": "1.0.0-snapshot.3.111a85f093.1",
   "description": "Example of a web application developed with React, React Router and Redux",
+  "keywords": [
+    "react",
+    "router",
+    "react router",
+    "redux",
+    "todo",
+    "list",
+    "todo list"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/jorgeac89/react-router-redux-todo-list#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jorgeac89/react-router-redux-todo-list.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jorgeac89/react-router-redux-todo-list/issues"
+  },
+  "author": "Jorge Antón Caballero <jorgeac89@gmail.com>",
   "main": "dist/assets/bundle/app.js",
   "files": [
     "dist/**/*"
