--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.0.0-snapshot.7",
+  "version": "1.0.0-snapshot.7.12d4b0766a.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "keywords": [
     "react",
