--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.1.0-snapshot.5",
+  "version": "1.1.0-snapshot.5.a4b5822e83.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "keywords": [
     "react",
