--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,6 @@
   "plugins": [
     "@babel/plugin-syntax-jsx",
     "@babel/plugin-syntax-dynamic-import",
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    "emotion"
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
   ]
 }
