refactor: change URLs to reactrouterreduxtodolist

--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -1,6 +1,6 @@
 server {
   listen                                  *:80;
-  server_name                             www.todolist.local;
+  server_name                             www.reactrouterreduxtodolist.local;
   access_log                              <path_to_project>/log/access.log;
   error_log                               <path_to_project>/log/error.log;
   root                                    <path_to_project>/dist;
@@ -20,6 +20,6 @@ server {
 
 server {
   listen                                  *:80 default;
-  server_name                             todolist.local;
-  return 301                              http://www.todolist.local$request_uri;
+  server_name                             reactrouterreduxtodolist.local;
+  return 301                              http://www.reactrouterreduxtodolist.local$request_uri;
 }
