--- a/nginx/nginx.docker.conf
+++ b/nginx/nginx.docker.conf
@@ -1,6 +1,6 @@
 server {
   listen                                  *:80;
-  server_name                             www.todolist.local;
+  server_name                             www.reactrouterreduxtodolist.local;
   access_log                              /var/log/nginx/access.log;
   error_log                               /var/log/nginx/error.log;
   root                                    /usr/share/nginx/html;
@@ -20,6 +20,6 @@ server {
 
 server {
   listen                                  *:80 default;
-  server_name                             todolist.local;
-  return 301                              http://www.todolist.local$request_uri;
+  server_name                             reactrouterreduxtodolist.local;
+  return 301                              http://www.reactrouterreduxtodolist.local$request_uri;
 }
