--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.2.1-snapshot.1",
+  "version": "1.2.1-snapshot.1.4d7c981d9d.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "keywords": [
     "react",
