--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
   "printWidth": 80,
   "tabWidth": 2,
-  "useTabs": true,
+  "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "arrowParens": "avoid",
   "parser": "flow",
   "requirePragma": false
