--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.3.0-snapshot.3",
+  "version": "1.3.0-snapshot.3.817a0cb677.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "keywords": [
     "react",
