--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.3.0-snapshot.5",
+  "version": "1.3.0-snapshot.5.388018b3aa.1",
   "description": "Example of a web application developed with React, React Router and Redux",
   "keywords": [
     "react",
@@ -54,6 +54,7 @@
     "test:watch": "./scripts/test-watch",
     "test:coverage": "./scripts/test-coverage",
     "test:update": "./scripts/test-update",
+    "test:clear": "./scripts/test-clear-cache",
     "lint": "./scripts/lint",
     "lint:watch": "./scripts/lint-watch",
     "lint:fix": "./script/lint-fix",
