--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.3.0-snapshot.6",
-  "description": "Example of a web application developed with React, React Router and Redux",
+  "version": "1.3.0-snapshot.6.1192efee58.1",
+  "description": "Example of web application implemented with React, React Router and Redux",
   "keywords": [
     "react",
     "router",
