--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-redux-todo-list",
-  "version": "1.3.0-snapshot.7",
+  "version": "1.4.0-rc.1",
   "description": "Example of web application implemented with React, React Router and Redux",
   "keywords": [
     "react",
